<resources>
    <string name="app_name">UMassLife</string>
    <string name="course_detail">Course Detail</string>
    <string name="spire_id">Spire ID:</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="input_your_spire_id">Input Your Spire ID</string>
    <string name="password">Password</string>
    <string name="course_schedule">Course Schedule</string>
    <string name="course">Course:</string>
    <string name="description">Description:</string>
    <string name="alert">ALERT</string>
    <string name="emergency">POST</string>
    <string name="status">Status:</string>
    <string name="content">Content:</string>
    <string name="time">Time:</string>
    <string name="statusimageicon">statusImageIcon</string>
    <string name="dining_list">Dining List</string>
    <string name="dining_detail">Dining Detail</string>
    <string name="name">Name:</string>
</resources>
